--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.2",
     "jose": "^6.0.8",
-    "next": "15.1.7",
+    "next": "^15.3.1",
     "next-themes": "^0.4.4",
     "pg": "^8.13.3",
     "react": "^19.0.0",
